--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,54 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
+	--font-sora: 'Sora', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: ##FFDE31;
+		--foreground: #ededed;
+	}
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	color: var(--foreground);
+	background: #0366FF;
+	font-family: var(--font-sora);
 }
+
+.linear-border {
+	border: 1px solid;
+	border-image: linear-gradient(115.43deg, rgba(231, 231, 231, 0) 24.08%, #C6C6C6 66.11%);
+	border-image-slice: 40;
+	position: relative;
+	padding: 16px;
+	border-radius: 5px; 
+	outline: 4px solid transparent;
+	outline-offset: -4px; /* Menarik outline ke dalam */
+	box-shadow: 0 0 0 4px linear-gradient(to right, #3acfd5, #3a4ed5);
+}
+
+.linear-border::before {
+	content: '';
+	position: absolute;
+	inset: 0;
+	padding: 4px; /* Ketebalan border */
+	border-radius: 12px; /* Radius untuk border */
+	border-image: linear-gradient(115.43deg, rgba(231, 231, 231, 0) 24.08%, #C6C6C6 66.11%);
+	mask-composite: exclude;
+	z-index: 1;
+}
+
+.shadow-card-primary {
+	box-shadow: 0px 12px 24px 0px rgba(0, 0, 0, 0.1);
+}
+
+.bg-linear-primary {
+	background: linear-gradient(90deg, rgba(3, 102, 255, 0) 10.05%, #0366FF 44.95%);
+
+}
+
+
